Now where did this come from? :)
svn path=/new.plone.org/trunk/; revision=25829

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -675,7 +675,7 @@ dl.portlet dt {
 	font-size: 12px;
 }
 #content #accordion dd {
-	margin-bottom: 0ter;
+	margin-bottom: 0;
 }
 
 #download-link {
