--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -57,7 +57,7 @@ h5 {
 	font-size: 0.75em; /* 12px equiv */
 }
 h6 {
-	font-size: 0.625; /* 10px equiv */
+	font-size: 0.625em; /* 10px equiv */
 }
 
 p {
