--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -341,6 +341,10 @@ div.sidebar {
 	margin: 0;
 }
 
+#content div.sidebar ul li{
+	margin-bottom: 0;
+}
+
 #content div.sidebar ul li a {
 	line-height: 36px;
 	font-size: 18px;
@@ -535,7 +539,7 @@ ul.topic li {
 /* @group Box */
 
 div.box {
-	height: 38em;
+	height: 40em;
 	border: 1px solid #e1e1e1;
 	padding: 9px 12px;
 	margin-left: -1px;
@@ -553,8 +557,8 @@ div.box h1 {
 }
 
 div.box p {
-	margin: 0 -12px;
-	padding: 10px 12px;
+	margin: 0 -1em;
+	padding: 10px -1em;
 }
 
 #content div.box ul {
@@ -603,8 +607,12 @@ div.box li.spotlight strong {
 div.box .info {
 	display: block;
 	text-align: right;
+	color: #aaa;
 }
 
+div.box .add {
+	float: right;
+}
 
 
 /* @end */
@@ -623,9 +631,6 @@ dl.portlet {
 	background-color: #f6f6f6;
 }
 
-#accordion {
-	height: 29.7em;	
-}
 #content #accordion h2 {
 	cursor: pointer;
 }
@@ -679,7 +684,7 @@ dl.portlet dt {
 	font-size: 12px;
 }
 #content #accordion dd {
-	margin-bottom: 0;
+	margin-bottom: 0.5em;
 }
 
 #download-link {
