--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -192,13 +192,18 @@ html, body {
 	line-height: 29px;
 }
 
+#main-nav li:first-child a {
+	border-left: none;
+}
+
+/*	XXX TODO: mini-logo goes here
+
 #main-nav li:first-child {
 	display: inline-block;
 	width: 2.93em !important;
 }
 
 #main-nav li:first-child a {
-	/*XXX TODO: mini-logo goes here*/
 	border-left: none;
 	background: 0.5em 0.3em url(images/plone-icon-24.png) no-repeat;
 	color: transparent;
@@ -216,7 +221,7 @@ body.template-new_frontpage #main-nav li:first-child a {
 body.template-new_frontpage #main-nav li:first-child a:hover {
 	cursor: default;
 	background: 0.5em 0.3em url(images/plone-icon-24.png) no-repeat;
-}
+}*/
 
 #sub-nav {
 	font: 13px/30px "Helvetica Neue", Arial;
@@ -260,8 +265,7 @@ ul.navigation li.active a {
 
 #user {
 	font-size: 14px;
-	width: 125px;
-	height: 14px;
+	width: 8em;
 	overflow: hidden;
 	float: right;
 	padding: 6px 4px;
