--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1007,8 +1007,11 @@ dl.portlet li {
 	margin: 0;
 	padding: 0.5em;
 	background-color: #666;
+	background-color: rgba(40,40,40,0.7);
 	color: White;
 	font-weight: bold;
+	position: relative;
+	top: -3em;
 }
 /* @end */
 
