Only address the form inputs in the content area.
svn path=/new.plone.org/trunk/; revision=25895

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1785,7 +1785,7 @@ font-size: 150%;
 width: inherit;
 }
 
-body.template-join_form input {
+body.template-join_form #content input {
 font-size: 150%;
 width: inherit;
 }
