--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1780,7 +1780,7 @@ background-color: #ffa;
 
 /* @group Login form */
 
-#login-form input {
+#login-form #content input {
 font-size: 150%;
 width: inherit;
 }
