Only text inputs get 100% width.
svn path=/new.plone.org/trunk/; revision=25899

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -1731,7 +1731,7 @@ color: Black;
 clear: both;
 margin-top: 1em;
 }
-.field input {
+.field input[type="text"] {
 	width: 100%;
 }
 .fieldRequired {
