--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -404,8 +404,8 @@ img.book-cover {
 #splash-frontpage {
 	min-height: 15.5em;
 	margin-right: 1em;
-	padding-right: 40%;
-	background: #205c90 url(file://./images/frontpage-image.jpg) no-repeat;
+	padding-left: 50%;
+	background: #205c90 0 -50px url(images/frontpage-image2.jpg) no-repeat;
 }
 
 
