Position the image correctly.
svn path=/new.plone.org/trunk/; revision=25964

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -405,7 +405,7 @@ img.book-cover {
 #splash-frontpage {
 	min-height: 15.5em;
 	margin-right: 1em;
-	background: #205c90 0 -23px url(images/frontpage-image3.jpg) no-repeat;
+	background: #205c90 0 -23px url(images/frontpage-image.png) no-repeat;
 }
 
 
