More twig adjustments :)
svn path=/new.plone.org/trunk/; revision=25965

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -408,6 +408,10 @@ img.book-cover {
 	background: #205c90 0 -23px url(images/frontpage-image.png) no-repeat;
 }
 
+#splash-frontpage a {
+	float: right;
+	margin-top: 3.5em;
+}
 
 #splash-downloads {
 	height: 11em;
