--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -411,6 +411,7 @@ img.book-cover {
 #splash-frontpage a {
 	float: right;
 	margin-top: 3.5em;
+
 }
 
 #splash-downloads {
@@ -653,7 +654,7 @@ div.box li.spotlight strong {
 div.box .info {
 	display: block;
 	text-align: right;
-	color: #aaa;
+	color: #888;
 }
 
 div.box .add {
