Experimenting with the Plone in Numbers box
svn path=/new.plone.org/trunk/; revision=25974

--- a/new.plone.org/static/plone.css
+++ b/new.plone.org/static/plone.css
@@ -630,7 +630,11 @@ div.box li:nth-child(even) {
 #current {
 	/*TODO: this needs to be a sprite element*/
 	/*background: 150px 380px url(images/cogs.png) no-repeat;*/	
-	border-right: none;
+	border: none;
+}
+
+#current h1 {
+	display: none;
 }
 
 div.box div.sources {
